--- a/System Platform Admin/2/2.md
+++ b/System Platform Admin/2/2.md
@@ -30,5 +30,10 @@
 - ==***!!! Emulation vs Virtualization !!!***==
 	- https://stackoverflow.com/questions/6234711/what-are-the-specific-differences-between-an-emulator-and-a-virtual-machine
 	- https://www.javatpoint.com/emulation-vs-virtualization
+		- ![[Pasted image 20230125233317.png]]
 	- https://stackoverflow.com/questions/6044978/full-emulation-vs-full-virtualization
 	- https://www.hitechnectar.com/blogs/virtualization-emulation/
+		- ![[Tabular-Comparison-of-Virtualization-and-Emulation.jpg]]![[
+	- https://www.youtube.com/watch?v=8gq4kXSt-CI
+		- Emulation guest system ใช้ software bridge ที่ intepret คำสั่งให้เป็น "ภาษา" ของ host system ก่อนรัน, ไม่ได้รันบน hardware อุปกรณ์จริง ทำให้ช้ากว่า
+		- Virtulization รันโค้ดด้วย "ภาษา" ของ host system ตรง ๆ , รันได้บน hardware จริงและเข้าถึง allocated resource ที่จัดเตรียมไว้ให้ก่อนหน้าได้ จึงรันได้เร็วกว่า
